# oura-mcp-server

./: .env  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SETUP_CLAUDE_DESKTOP.md  claude_desktop_config.json  demo_ideal_ux.py  env.example  example_usage.py  pyproject.toml  server.py  setup.sh  smithery.yaml  test_mcp_protocol.py  test_server.py
src/oura_server/: __init__.py  server.py
