[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oura-mcp"
version = "0.1.0"
description = "MCP server for Oura Ring sleep data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
oura-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
